# bin

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
client/: index.css  index.html  index.js  package.json  webpack.config.js
src/: main.rs
src/routes/: routes.rs
src/structs/: structs.rs
static/: index.html
static/css/: main.css
static/js/: main.js
templates/: index.html
views/: index.hbs
views/assets/js/: main.js
