[package]
authors = ["Sparkenstein <zetabytes.pp@gmail.com>"]
edition = "2018"
name = "binrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# askama = {version = "0.10.2", default-features = false, features = ["with-tide"]}
askama = {version = "0.10.2", default-features = false, features = ["with-tide"]}
askama_tide = {version = "0.13.0"}
async-std = {version = "1.8.0", features = ["attributes"]}
env_logger = "0.7.1"
nanoid = "0.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "~1.0.0"
tide = "0.16.0"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.
panic = 'abort'
