[package]
authors = ["Sparkenstein <zetabytes.pp@gmail.com>"]
edition = "2021"
name = "binrs"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

askama = { version = "0.11.1", default-features = false, features = [
    "with-axum",
] }
axum = { version = "0.5", features = ["http2"] }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.1", features = ["full"] }
tracing = "0.1.32"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama_axum = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'   # Optimize for size.
panic = 'abort'
